--- a/index.html
+++ b/index.html
@@ -22,202 +22,234 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html"
-          >Web<span class="logo-past">Studio</span></a
-        >
-        <ul>
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-past">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
-
       <section class="features">
-        <h2>Strategy, technology and analytics for brand development</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-item-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">
+            Strategy, technology and analytics for brand development
+          </h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-item-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="taste">
-        <h2 class="taste-title">Our Team</h2>
-        <ul class="taste-list">
-          <li class="taste-item">
-            <img
-              class="taste-image"
-              src="./images/images-3.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="taste-subtitle">Mark Guerrero</h3>
-            <p class="taste-text">Product Designer</p>
-          </li>
-          <li class="taste-item">
-            <img
-              class="taste-image"
-              src="./images/images-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="taste-subtitle">Tom Ford</h3>
-            <p class="taste-text">Frontend Developer</p>
-          </li>
-          <li class="taste-item">
-            <img
-              class="taste-image"
-              src="./images/images-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="taste-subtitle">Camila Garcia</h3>
-            <p class="taste-text">Marketing</p>
-          </li>
-          <li class="taste-item">
-            <img
-              class="taste-image"
-              src="./images/images.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="taste-subtitle">Daniel Wilson</h3>
-            <p class="taste-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="taste-title">Our Team</h2>
+          <ul class="taste-list">
+            <li class="taste-item">
+              <img
+                class="taste-image"
+                src="./images/images-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="basket">
+                <h3 class="taste-subtitle">Mark Guerrero</h3>
+                <p class="taste-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                class="taste-image"
+                src="./images/images-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="basket">
+                <h3 class="taste-subtitle">Tom Ford</h3>
+                <p class="taste-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                class="taste-image"
+                src="./images/images-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="basket">
+                <h3 class="taste-subtitle">Camila Garcia</h3>
+                <p class="taste-text">Marketing</p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                class="taste-image"
+                src="./images/images.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="basket">
+                <h3 class="taste-subtitle">Daniel Wilson</h3>
+                <p class="taste-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="made">
-        <h2 class="made-title">Our Portfolio</h2>
-        <ul class="made-list">
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Banking App</h3>
-            <p class="made-text">App</p>
-          </li>
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img-1.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Cashless Payment</h3>
-            <p class="made-text">Marketing</p>
-          </li>
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img-2.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Meditation App</h3>
-            <p class="made-text">App</p>
-          </li>
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img-3.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Taxi Service</h3>
-            <p class="made-text">Marketing</p>
-          </li>
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img-4.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Screen Illustrations</h3>
-            <p class="made-text">Design</p>
-          </li>
-          <li class="made-item">
-            <img
-              class="made-image"
-              src="./images/img-5.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="made-subtitle">Online Courses</h3>
-            <p class="made-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="made-title">Our Portfolio</h2>
+          <ul class="made-list">
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Banking App</h3>
+                <p class="made-text">App</p>
+              </div>
+            </li>
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img-1.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Cashless Payment</h3>
+                <p class="made-text">Marketing</p>
+              </div>
+            </li>
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img-2.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Meditation App</h3>
+                <p class="made-text">App</p>
+              </div>
+            </li>
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img-3.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Taxi Service</h3>
+                <p class="made-text">Marketing</p>
+              </div>
+            </li>
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img-4.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Screen Illustrations</h3>
+                <p class="made-text">Design</p>
+              </div>
+            </li>
+            <li class="made-item">
+              <img
+                class="made-image"
+                src="./images/img-5.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="card">
+                <h3 class="made-subtitle">Online Courses</h3>
+                <p class="made-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo footer-logo" href="./index.html"
-        >Web<span class="logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
