--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </section>
       <section class="made">
-        <div class="container">
+        <div class="container made-container">
           <h2 class="made-title">Our Portfolio</h2>
           <ul class="made-list">
             <li class="made-item">
